# Simple_Root_GUI

./: .gitignore  CMakeLists.txt
compiled_gui/: CMakeLists.txt  gui.cc  gui.hh  guiLinkDef.hh  main.cxx
compiled_gui/test/: guiDict.cxx  guiDict.h
macro/: gui.cc
